@@ -1,9 +1,9 @@
 package com.projeto.security;
 
-import java.util.Collections;
-import java.util.Optional;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -11,7 +11,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Component;
 
 import com.projeto.entity.User;
-import com.projeto.repository.UserRepositoy;
+import com.projeto.repository.UserRepository;
 
 // O UserDetailService é usado para recuperar os detalhes do usuario que estão tentando se autenticar
 // na aplicacao. Isso e feito atraves do metodo loadUserByUsername.
@@ -20,18 +20,22 @@ import com.projeto.repository.UserRepositoy;
 @Component
 public class UserDetailsServiceImpl implements UserDetailsService{
     
-    @Autowired private UserRepositoy userRepo;
+    @Autowired 
+    private UserRepository userRepo;
 
     @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException{
-        Optional<User> userRes = userRepo.findUserByEmail(email);
-    if(userRes.isEmpty()){
-        throw new UsernameNotFoundException("Não foi possível encontrar o usuário com o email: " +email);
-    }
-    User user = userRes.get();
-    return new org.springframework.security.core.userdetails.User(
-        email,
-        user.getUserPassword(),
-        Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")));
+    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+        User user = userRepo.findByEmail(email)
+            .orElseThrow(() -> new UsernameNotFoundException("Não foi possível encontrar o usuário com o email: " + email));
+
+        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_USER"));
+
+        System.out.println("Usuário encontrado: " + user.getEmail());
+        
+        return new org.springframework.security.core.userdetails.User(
+            user.getEmail(),
+            user.getUserPassword(), // 🔹 Certifique-se de que está criptografada com BCrypt
+            authorities
+        );
     }
 }
